feat(core) Link common words js file to html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <button>Guess Number</button>
       </form>
 
+    <script type="text/javascript" src="./js/common-words.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
+
   </body>
 </html>
