feat(core) Add div to html; Move random# functions
Add div to html to inform players of letters in word
Move random word/# function to top, so it can be called
  first through declaring a variable

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div class="response"></div>
+    <div class="tracker"></div>
       <form class="guess">
         <h3 class="message">Guess a letter!</h3>
         <input type="text" name="guess" placeholder="?">
