--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
         <button>Guess Number</button>
       </form>
 
+    <section class="body">
+      <div id="head"></div>
+      <div id="neck"></div>
+      <div id="arm1"></div>
+      <div id="arm2"></div>
+      <div id="torso"></div>
+      <div id="leg1"></div>
+      <div id="leg2"></div>
+    </section>
+
     <script type="text/javascript" src="./js/common-words.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
 
