--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Hangman</title>
+    <link rel="stylesheet" href="./css/master.css" >
   </head>
   <body>
     <div class="response"></div>
@@ -14,6 +15,7 @@
       </form>
 
     <section class="body">
+      <p class="mistakesLeft">Mistakes left: 8</p>
       <div id="head"></div>
       <div id="neck"></div>
       <div id="arm1"></div>
