feat(core) Change p to h2; Add losing message & condition
Change p to h2
  -Make messages for visible
Losing message
  -Inform player when they are out of guesses and they
    have lost.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div class="response"></div>
     <div class="tracker"></div>
+    <h2 class="mistakesLeft">Mistakes left: 8</h2>
       <form class="guess">
         <h3 class="message">Guess a letter!</h3>
         <input type="text" name="guess" placeholder="?">
@@ -15,7 +16,6 @@
       </form>
 
     <section class="body">
-      <p class="mistakesLeft">Mistakes left: 8</p>
       <div id="head"></div>
       <div id="neck"></div>
       <div id="arm1"></div>
