feat(core) Add div for guessed letters; Update random words
Add div
  - Needed a space to put in letters that user guessed
Update random words
  -Words not include letters that repeat

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   <body>
     <div class="response"></div>
     <div class="tracker"></div>
+    <div class="guessedLetters"></div>
     <h2 class="mistakesLeft">Mistakes left: 8</h2>
       <form class="guess">
         <h3 class="message">Guess a letter!</h3>
-        <input type="text" name="guess" placeholder="?">
+        <input type="text" name="guess" placeholder="?" maxlength="1">
         <button>Guess Number</button>
       </form>
 
