WIP Function to keep track of guesses and check guess

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <div class="response"></div>
     <div class="tracker"></div>
     <div class="guessedLetters"></div>
+    <div class="feedback"></div>
+    <div class="alert"></div>
     <h2 class="mistakesLeft">Mistakes left: 8</h2>
       <form class="guess">
         <h3 class="message">Guess a letter!</h3>
