--- a/index.html
+++ b/index.html
@@ -6,26 +6,38 @@
     <link rel="stylesheet" href="./css/master.css" >
   </head>
   <body>
-    <div class="response"></div>
-    <div class="tracker"></div>
-    <div class="guessedLetters"></div>
-    <div class="feedback"></div>
-    <h2 class="mistakesLeft">Mistakes left: 8</h2>
+  <div class="parent_cont">
+    <div class="heading_cont">
+      <h1> Hangman </h1>
+      <h3 class="message">Guess a letter!</h3>
+    </div>
+
+    <div class="feedback_cont">
       <form class="guess">
-        <h3 class="message">Guess a letter!</h3>
         <input type="text" name="guess" placeholder="?" maxlength="1">
         <button>Guess Number</button>
       </form>
+      <div class="response"></div>
+      <div class="tracker"></div>
+      <div class="guessedLetters"></div>
+      <div class="mistakesLeft">Mistakes left: 8</div>
+      <div class="feedback"></div>
+    </div>   <!-- ends feedback_cont -->
 
-    <section class="body">
-      <div id="head"></div>
-      <div id="neck"></div>
-      <div id="arm1"></div>
-      <div id="arm2"></div>
-      <div id="torso"></div>
-      <div id="leg1"></div>
-      <div id="leg2"></div>
-    </section>
+    <div class="body_cont">
+      <section class="body">
+        <div id="head"></div>
+        <div id="neck"></div>
+        <div id="arm1"></div>
+        <div id="arm2"></div>
+        <div id="torso"></div>
+        <div id="leg1"></div>
+        <div id="leg2"></div>
+      </section>
+    </div> <!-- ends body_cont -->
+
+  </div>   <!-- ends parent_cont -->
+
 
     <script type="text/javascript" src="./js/common-words.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
