feat(core) Update layout with spacing and centering

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="feedback_cont">
       <form class="guess">
         <input type="text" name="guess" placeholder="?" maxlength="1">
-        <button>Guess Number</button>
+        <button class='btn'>Guess</button>
       </form>
       <div class="response"></div>
       <div class="tracker"></div>
