feat(core) Style hangman body with CSS

--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
       <section class="body">
         <div id="head"></div>
         <div id="neck"></div>
-        <div id="arm1"></div>
-        <div id="arm2"></div>
-        <div id="torso"></div>
-        <div id="leg1"></div>
-        <div id="leg2"></div>
+        <!-- <div class="midSection"> -->
+          <div id="torso"></div>
+          <div id="arm1"></div>
+          <div id="arm2"></div>
+        <!-- </div> -->
+        <div class="bottom">
+          <div id="leg1"></div>
+          <div id="leg2"></div>
+        </div>
       </section>
     </div> <!-- ends body_cont -->
 
