feat(core) Finish styling game

--- a/index.html
+++ b/index.html
@@ -20,22 +20,21 @@
       <div class="response"></div>
       <div class="tracker"></div>
       <div class="guessedLetters"></div>
-      <div class="mistakesLeft">Mistakes left: 8</div>
       <div class="feedback"></div>
+      <div class="mistakesLeft">Mistakes left: 8</div>
     </div>   <!-- ends feedback_cont -->
 
     <div class="body_cont">
       <section class="body">
         <div id="head"></div>
         <div id="neck"></div>
-        <!-- <div class="midSection"> -->
-          <div id="torso"></div>
-          <div id="arm1"></div>
-          <div id="arm2"></div>
-        <!-- </div> -->
-        <div class="bottom">
-          <div id="leg1"></div>
-          <div id="leg2"></div>
+        <div id="torso"></div>
+        <div id="arm1"></div>
+        <div id="arm2"></div>
+        <div id="leg1"></div>
+        <div id="leg2"></div>
+        <div id="dead">
+          <img src='./images/dead_face.png' alt="A picture of a dead face."/>
         </div>
       </section>
     </div> <!-- ends body_cont -->
