feat(fix) Fix dead face appearing at end

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="arm2"></div>
         <div id="leg1"></div>
         <div id="leg2"></div>
-        <div id="dead">
+        <div id="hang">
           <img src='./images/dead_face.png' alt="A picture of a dead face."/>
         </div>
       </section>
