feat(core) Refactor userGuess
Cleaning up user guess by separating state and rendering.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="feedback_cont">
       <form class="guess">
         <input type="text" name="guess" placeholder="?" maxlength="1">
-        <button class='btn'>Guess</button>
+        <button class="btn">Guess</button>
       </form>
       <div class="response"></div>
       <div class="tracker"></div>
@@ -34,7 +34,7 @@
         <div id="leg1"></div>
         <div id="leg2"></div>
         <div id="hang">
-          <img src='./images/dead_face.png' alt="A picture of a dead face."/>
+          <img src="./images/dead_face.png" alt="A picture of a dead face."/>
         </div>
       </section>
     </div> <!-- ends body_cont -->
@@ -44,6 +44,9 @@
 
     <script type="text/javascript" src="./js/common-words.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
+    <script type="text/javascript" src="./js/render.js">
+
+    </script>
 
   </body>
 </html>
