Add a reset button and remove the guess button when a game is lost

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <div class="feedback_cont">
       <form class="guess">
         <input type="text" name="guess" placeholder="?" maxlength="1">
-        <button class="btn">Guess</button>
+        <button id='btn' class="btn">Guess</button>
       </form>
+      <button class="reset">Reset</button>
       <div class="response"></div>
       <div class="tracker"></div>
       <div class="guessedLetters"></div>
