add information on letters players have guessed

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <div class="feedback_cont">
       <form class="guess">
         <input type="text" name="guess" placeholder="?" maxlength="1">
-        <button id='btn' class="btn">Guess</button>
+        <button id="btn" class="btn">Guess</button>
       </form>
       <button class="reset">Reset</button>
       <div class="response"></div>
       <div class="tracker"></div>
+      <p>Letters you have guessed:</p>
       <div class="guessedLetters"></div>
       <div class="feedback"></div>
       <div class="mistakesLeft">Mistakes left: 8</div>
